--- a/backend/nodejs/express/travel-agency/package.json
+++ b/backend/nodejs/express/travel-agency/package.json
@@ -4,13 +4,14 @@
   "description": "Travel Agency es una aplicación web desarrollada con Node.js, Express",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon index.js"
+    "dev": "nodemon index.js"
   },
-  "type" : "module",
+  "type": "module",
   "author": "Ian Scateni",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
