🧹 Update .gitignore to exclude macOS metadata and system files

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,38 @@
-# Node
+# -------------------------------
+# Node.js
+# -------------------------------
 node_modules/
 .env
 
+# -------------------------------
 # Python
+# -------------------------------
 __pycache__/
 *.pyc
 
+# -------------------------------
 # Java
+# -------------------------------
 target/
 *.class
 
+# -------------------------------
 # Docker
+# -------------------------------
 *.log
 docker-compose.override.yml
 
-# IDEs
+# -------------------------------
+# IDEs / Editors
+# -------------------------------
 .vscode/
 .idea/
 
-# OS
+# -------------------------------
+# macOS
+# -------------------------------
 .DS_Store
-Thumbs.db
+._*
+.AppleDouble
+.Spotlight-V100
+.Trashes
