--- a/backend/nodejs/express/travel-agency/package.json
+++ b/backend/nodejs/express/travel-agency/package.json
@@ -4,12 +4,14 @@
   "description": "Travel Agency es una aplicación web desarrollada con Node.js, Express",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start":  "node index.js"
   },
   "type": "module",
   "author": "Ian Scateni",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "pug": "^3.0.3",
